Refactror UnitFactoryImpl